--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Side Comparision</title>
 </head>
 <body>
 
-    <div class="container-fluid Content">
-        <div class="row">
-            <div w3-include-html="/htmls/one.html" class="col-md-6 Content"></div>
-            <div w3-include-html="/htmls/two.html" class="col-md-6 Header"></div>
+    <div class="container-fluid content h-100">
+        <div class="row" style="min-height:0">
+            <div w3-include-html="/htmls/one.html" class="col-md-6 left" ></div>
+            <div w3-include-html="/htmls/two.html" class="col-md-6 right" ></div>
         </div>
     </div>
 
